--- a/packages/mgt-components/src/components/mgt-person/mgt-person.theme.scss
+++ b/packages/mgt-components/src/components/mgt-person/mgt-person.theme.scss
@@ -20,8 +20,8 @@ $person: (
   ),
   presence__icon__color: (
     _var: --presence-icon-color,
-    dark: $text__color__main--dark,
-    light: $text__color__main--light
+    dark: $text__color__main--light,
+    light: $text__color__main--dark
   ),
   line2__color: (
     _var: --line2-color,
