Seperating shared vars and styles.

--- a/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.theme.scss
+++ b/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.theme.scss
@@ -4,7 +4,7 @@
  * See License in the project root for license information.
  * -------------------------------------------------------------------------------------------
  */
-@import '../../styles/shared-styles.scss';
+@import '../../styles/shared-sass-variables.scss';
 
 $agenda: (
   event__background-color: (
