--- a/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.scss
+++ b/packages/mgt-components/src/components/mgt-agenda/mgt-agenda.scss
@@ -36,7 +36,7 @@ mgt-agenda .agenda-list {
 mgt-agenda .event {
   background: set-var(event__background-color, $theme-default, $agenda);
   border: var(--event-border, solid 2px rgba(0, 0, 0, 0));
-  box-shadow: var(--event-box-shadow, 0px 2px 8px rgba(0, 0, 0, 0.092));
+  box-shadow: var(--event-box-shadow, 0px 2px 8px set-var(box-shadow, $theme-default, $common));
   margin: var(--event-margin, 0px 10px 14px 10px);
   padding: var(--event-padding, 0px);
   display: flex;
