--- a/packages/mgt-components/src/components/mgt-people/mgt-people.theme.scss
+++ b/packages/mgt-components/src/components/mgt-people/mgt-people.theme.scss
@@ -5,4 +5,4 @@
  * -------------------------------------------------------------------------------------------
  */
 
-@import '../../styles/shared-styles.scss';
+@import '../../styles/shared-sass-variables.scss';
