--- a/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-profile/mgt-person-card-profile.scss
+++ b/packages/mgt-components/src/components/mgt-person-card/sections/mgt-person-card-profile/mgt-person-card-profile.scss
@@ -7,6 +7,7 @@
 
 @import '../base-person-card-section.scss';
 @import '../../../../styles/shared-styles.scss';
+@import '../../../../styles/shared-sass-variables.scss';
 
 :host {
   position: relative;
