--- a/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.theme.scss
+++ b/packages/mgt-components/src/components/mgt-tasks-base/mgt-tasks-base.theme.scss
@@ -5,7 +5,7 @@
  * -------------------------------------------------------------------------------------------
  */
 
-@import '../../styles/shared-styles.scss';
+@import '../../styles/shared-sass-variables.scss';
 
 $tasks: (
   background-color: (
