--- a/packages/mgt-components/src/components/sub-components/mgt-arrow-options/mgt-arrow-options.scss
+++ b/packages/mgt-components/src/components/sub-components/mgt-arrow-options/mgt-arrow-options.scss
@@ -6,6 +6,7 @@
  */
 
 @import '../../../styles/shared-styles.scss';
+@import '../../../styles/shared-sass-variables.scss';
 
 $arrow-options-left: var(--arrow-options-left, 0);
 
