--- a/packages/mgt-components/src/components/mgt-login/mgt-login.scss
+++ b/packages/mgt-components/src/components/mgt-login/mgt-login.scss
@@ -9,8 +9,6 @@
 @import '../../styles/shared-styles.scss';
 @import './mgt-login.theme.scss';
 
-$color--hover: var(--color-hover, #{$commblue_primary});
-
 :host,
 mgt-login {
   --font-size: #{$ms-font-size-m};
@@ -34,23 +32,23 @@ mgt-login .root {
 mgt-login .login-button {
   display: flex;
   align-items: center;
-  font-family: var(--default-font-family);
+  font-family: $font-family;
   font-size: var(--font-size);
   font-weight: var(--font-weight);
   width: var(--width);
   height: var(--height);
   margin: var(--margin);
   padding: var(--padding);
-  color: set-var(color, $theme-default, $login);
-  background-color: set-var(button__background-color, $theme-default, $login);
+  color: $button__color;
+  background-color: $button__background-color;
   border: none;
   cursor: pointer;
   transition: color 0.3s, background-color 0.3s;
 
   &:hover {
-    color: $color--hover;
-    --color: $color--hover;
-    background-color: set-var(button__background-color--hover, $theme-default, $login);
+    color: $button__color--hover;
+    --color: #{$button__color--hover};
+    background-color: $button__background-color--hover;
   }
 
   &:focus {
@@ -76,12 +74,12 @@ mgt-login .login-icon {
 
 :host .popup,
 mgt-login .popup {
-  font-family: var(--default-font-family);
-  background-color: set-var(popup__background-color, $theme-default, $login);
+  font-family: $font-family;
+  background-color: $popup__background-color;
   min-width: 240px;
   z-index: 1;
-  color: set-var(popup__color, $theme-default, $login);
-  --color: set-var(popup__color, $theme-default, $login);
+  color: $popup__color;
+  --color: #{$popup__color};
 }
 
 :host .popup-content,
@@ -100,11 +98,11 @@ mgt-login .popup-commands ul {
 
 :host .popup-command,
 mgt-login .popup-command {
-  font-family: var(--default-font-family);
+  font-family: $font-family;
   font-size: var(--popup-command-font-size);
   font-weight: var(--font-weight);
   color: #{$commblue_primary};
-  background-color: set-var(popup__background-color, $theme-default, $login);
+  background-color: $popup__background-color;
   border: none;
   padding: 0;
   cursor: pointer;
