--- a/packages/mgt-components/src/components/mgt-login/mgt-login.theme.scss
+++ b/packages/mgt-components/src/components/mgt-login/mgt-login.theme.scss
@@ -7,32 +7,12 @@
 
 @import '../../styles/shared-sass-variables.scss';
 
-$login: (
-  color: (
-    _var: --color,
-    dark: $text__color__sub1--dark,
-    light: $text__color__sub1--light
-  ),
-  button__background-color: (
-    _var: --background-color,
-    dark: $background-color__main--dark,
-    light: $background-color__main--light
-  ),
-  button__background-color--hover: (
-    _var: --background-color--hover,
-    dark: $background-color__main--hover--dark,
-    light: $background-color__main--hover--light
-  ),
-  popup__color: (
-    _var: --popup-color,
-    dark: $text__color__sub1--dark,
-    light: $text__color__sub1--light
-  ),
-  popup__background-color: (
-    _var: --popup-content-background-color,
-    dark: $background-color__main--dark,
-    light: $background-color__main--light
-  )
+$button__color--hover: var(--color-hover, #{$commblue_primary});
+$button__color: var(--button-color, set-var(color__sub1, $theme-default, $common));
+$button__background-color: var(--button-background-color, set-var(background-color__sub1, $theme-default, $common));
+$button__background-color--hover: var(
+  --button-background-color-hover,
+  set-var(background-color--hover, $theme-default, $common)
 );
-
-@include create-themes($login);
+$popup__color: var(--popup-color, set-var(color__sub1, $theme-default, $common));
+$popup__background-color: var(--popup-background-color, set-var(background-color__sub1, $theme-default, $common));
