Update people-picker common var

--- a/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
+++ b/packages/mgt-components/src/components/mgt-people-picker/mgt-people-picker.scss
@@ -12,7 +12,7 @@
 // Main
 :host {
   border-radius: 2px;
-  font-family: var(--default-font-family, 'Segoe UI');
+  font-family: $font-family;
   height: 38px;
   display: contents;
   height: 100%;
@@ -25,13 +25,13 @@ mgt-people-picker .root {
 }
 
 .people-picker {
-  background-color: set-var(input__background-color, $theme-default, $people-picker);
+  background-color: $input__background-color;
   @include input__border($theme-default);
   &:hover {
-    border-color: set-var(input__border-color--hover, $theme-default, $people-picker);
+    border-color: $input__border-color--hover;
   }
   &.focused {
-    border-color: set-var(input__border-color--focus, $theme-default, $people-picker);
+    border-color: $input__border-color--focus;
   }
   padding-bottom: 6px;
 
@@ -64,8 +64,8 @@ mgt-people-picker .root {
         min-width: 100%;
         --avatar-size-s: 24px;
         margin-left: 0px;
-        --color: set-var(color, $theme-default, $people-picker);
-        color: set-var(color, $theme-default, $people-picker);
+        --color: #{$color};
+        color: $color;
         margin-bottom: 1px;
         margin-right: 4px;
       }
@@ -96,7 +96,7 @@ mgt-people-picker .root {
           cursor: pointer;
           right: 0;
           background-color: set-var(selected-person__background-color, $theme-default, $people-picker);
-          color: set-var(color, $theme-default, $people-picker);
+          color: $color;
         }
       }
     }
@@ -119,7 +119,7 @@ mgt-people-picker .root {
           width: 100%;
           display: flex;
           flex: 1 0 auto;
-          font-family: var(--default-font-family, 'Segoe UI');
+          font-family: $font-family;
           position: relative;
           line-height: normal;
           outline: none;
@@ -127,13 +127,13 @@ mgt-people-picker .root {
           font-weight: normal;
           font-size: 14px;
           line-height: 19px;
-          background-color: set-var(input__background-color, $theme-default, $people-picker);
-          color: set-var(color, $theme-default, $people-picker);
+          background-color: $input__background-color;
+          color: $color;
           &::placeholder {
-            color: set-var(placeholder__color, $theme-default, $people-picker);
+            color: $placeholder__color;
           }
           &:focus::placeholder {
-            color: set-var(placeholder__color--focus, $theme-default, $people-picker);
+            color: $placeholder__color--focus;
           }
         }
       }
@@ -145,8 +145,7 @@ mgt-people-picker .root {
         overflow-y: auto;
         text-align: left;
         list-style-type: none;
-        background-color: set-var(dropdown__background-color, $theme-default, $people-picker);
-        box-shadow: set-var(box-shadow, $theme-default, $common);
+        background-color: $dropdown__background-color;
 
         li {
           cursor: pointer;
@@ -163,14 +162,14 @@ mgt-people-picker .root {
             font-size: 14px;
             &:hover,
             &.focused {
-              background-color: set-var(dropdown-item__background-color, $theme-default, $people-picker);
+              background-color: $dropdown-item__background-color--hover;
             }
             .people-person-text-area {
               margin-left: 13px;
               flex: 1 1 0;
               max-height: 40px;
               overflow: hidden;
-              color: set-var(color, $theme-default, $people-picker);
+              color: $color;
 
               .people-person-text {
                 font-size: 14px;
@@ -199,7 +198,7 @@ mgt-person {
 :host .loading-text,
 mgt-people-picker .search-error-text,
 mgt-people-picker .loading-text {
-  font-family: var(--default-font-family, 'Segoe UI');
+  font-family: $font-family;
   font-style: normal;
   font-weight: 600;
   font-size: 14px;
@@ -207,7 +206,7 @@ mgt-people-picker .loading-text {
   text-align: center;
   margin-left: 50px;
   margin-right: 50px;
-  color: #0078d4;
+  color: $commblue_primary;
 }
 
 :host .message-parent,
