Add mgt-channel-picker common themes

--- a/packages/mgt-components/src/components/sub-components/mgt-flyout/mgt-flyout.scss
+++ b/packages/mgt-components/src/components/sub-components/mgt-flyout/mgt-flyout.scss
@@ -14,7 +14,7 @@
     position: fixed;
     z-index: 9999999;
     opacity: 0;
-    box-shadow: set-var(box-shadow, $theme-default, $common);
+    box-shadow: set-var(box-shadow__ms, $theme-default, $common);
   }
 
   &.visible {
