--- a/packages/mgt-components/src/components/mgt-people/mgt-people.scss
+++ b/packages/mgt-components/src/components/mgt-people/mgt-people.scss
@@ -17,7 +17,7 @@ mgt-people .people-list {
   list-style-type: none;
   margin: $list-margin;
   padding: 0;
-  font-family: var(--default-font-family, 'Segoe UI');
+  font-family: $font-family;
   color: set-var(color, $theme-default, $common);
   font-style: normal;
   font-weight: normal;
